--- a/bootstrap-practice/portfolio.html
+++ b/bootstrap-practice/portfolio.html
@@ -16,37 +16,271 @@
 <body>
   <header>
     <div class="headerBackground">
-      <div class="container">
+      <div class="container mb-4">
         <div class="row">
           <div class="col-12">
-            <nav class="navbar navbar-expand-lg">
-              <a class="nav-link headerContent" href="#">Khyathi / 7095644755</a>
+            <nav class="navbar navbar-expand-lg p-0 mt-4">
+              <a class="navbar-brand headerContent" href="#">Khyathi / 7095644755</a>
               <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+                  <span class="navbar-toggler-icon"></span>
+              </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                   <li class="nav-item active">
-                    <a class="nav-link headerContent" href="#">Work <span class="sr-only">(current)</span></a>
+                    <a class="nav-link headerContent" href="work.html">Work <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link headerContent" href="#">About</a>
+                    <a class="nav-link headerContent" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link headerContent" href="#">Contact</a>
+                    <a class="nav-link headerContent" href="Contact.html">Contact</a>
                   </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                   <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                  <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Sign in</button>
+                  <button class="btn btn-primary mt-1" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    Contact
+                  </button>
+                  <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                      Feel free to contact me:<br>@Tel:99999999<br>Mobile:7095644755
+                    </div>
+                  </div>
                 </form>
               </div>
             </nav>
           </div>
         </div>
+        <div class="row mt-4 mb-0">
+          <div class="col-8">
+            <div class="headerContext">
+              I am a designer with the ability to solve problems and make everyone's life better.
+            </div>
+          </div>
+          <div class="col-4">
+            <img src="../bujji.jpg" alt="myImage" class="imagesWidth">
+          </div>
+        </div>
       </div>
     </div>
   </header>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h3 class="mb-4"><span class="heading">About</span> <span class="headingBorder pb-2">Me</span></h3>
+        </div>
+        <div class="col-12 col-md-6">
+          <p class=mb-5>I am VijayaLakshmi Mule. I am working as an intern at iBHubs.I am still a student.I really like to look professional but also have personal flare.I really love to code and debug.I am very active in every task..</p>
+          <div class="row">
+            <div class="col-6 mb-5">
+              <p>
+                <a class="btn-lg ml-2 btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Contact</a>
+              </p>
+              <div class="row">
+                <div class="col">
+                  <div class="collapse multi-collapse" id="multiCollapseExample1">
+                    <div class="card card-body">
+                      Feel free to contact me:<br>@Tel:99999999<br>Mobile:7095644755
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 mb-5">
+              <div class="dropdown">
+                <a class="btn-lg btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Know More
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Hobbies</a>
+                  <a class="dropdown-item" href="#projects">Projects</a>
+                  <a class="dropdown-item" href="#education">Education</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6">
+          <p class="aboutmeContext">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
+            ex ea commodo consequat.</p>
+          <p class="aboutmeContext">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container mt-4 mb-4">
+      <div class="row">
+        <div class="col-12 col-md-12">
+          <h3 class="mb-4 skillsContext">Skills</h3>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center ">
+          <div><img src="../static/Skills/C Language Icon/css.png" alt="c-lang" class="mr-4 skillsImg mb-2"></div>
+          <div class="mr-4 skillsContext">C</div>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center">
+          <div><img src="../static/Skills/HTML Icon/html(1).png" alt="html-lang" class="mr-4 skillsImg mb-2"></div>
+          <div class="mr-4 skillsContext">HTML</div>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center">
+          <div><img src="../static/Skills/CSS Icon/css(1).png" alt="css-lang" class="mr-4 skillsImg mb-2"></div>
+          <div class="mr-4 skillsContext">CSS</div>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center">
+          <div><img src="../assignments/assignment-24/assets/android.png" alt="android" class="mr-4 skillsImg mb-2"></div>
+          <div class="mr-4 skillsContext">Android</div>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center">
+          <div><img src="../assignments/assignment-24/assets/arduino.png" alt="arduino" class="mr-4 skillsImg mb-2"></div>
+          <div class="mr-4 skillsContext">Arduino</div>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center">
+          <div class="mr-4 bootsrapIcon mb-2 skillsImg">
+            <h1>B</h1>
+          </div>
+          <div class="mr-4 skillsContext">Bootstrap</div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mt-4 mb-4">
+            <h3 id=projects><span class="heading">My</span> Projec<span class="headingBorder">ts</span></h3>
+          </div>
+          <div class="accordion" id="accordionExample">
+            <div class="col-12">
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                 Android
+              </button>
+                  </h2>
+                </div>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      Mobile Development
+                    </h5>
+                    <p class="card-text">
+                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="card">
+                <div class="card-header" id="headingTwo">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Web Development
+              </button>
+                  </h2>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      Website
+                    </h5>
+                    <p class="card-text">
+                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="card">
+                <div class="card-header" id="headingThree">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      IoT
+                    </button>
+                  </h2>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      Women Safety
+                    </h5>
+                    <p class="card-text">
+                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-9 col-lg-4 mt-4 mb-4">
+          <h3 id="education"><span class="heading">My</span> Educat<span class="headingBorder">ion</span></h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-lg-3 block">
+          <div>2014-2017</div><br>
+          <h5>Bachelor's<br>Degree</h5>
+        </div>
+        <div class="col-12 d-lg-none ">
+          <h5>Computer Science Engineering</h5>
+          <p>IIIT R K Valley</p>
+          <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+        </div>
+        <div class="col-lg-9 d-none d-lg-block descriptionBlock">
+          <h5>Computer Science Engineering</h5>
+          <p>IIIT R K Valley</p>
+          <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-12 col-lg-3 block">
+          <div>2014-2017</div><br>
+          <h5>Bachelor's<br>Degree</h5>
+        </div>
+        <div class="col-12 d-lg-none">
+          <h5>Computer Science Engineering</h5>
+          <p>IIIT R K Valley</p>
+          <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+        </div>
+        <div class="col-lg-9 d-none d-lg-block descriptionBlock">
+          <h5>Computer Science Engineering</h5>
+          <p>IIIT R K Valley</p>
+          <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-12 col-lg-3 block">
+          <div>2014-2017</div><br>
+          <h5>Bachelor's<br>Degree</h5>
+        </div>
+        <div class="col-12 d-lg-none">
+          <h5>Computer Science Engineering</h5>
+          <p>IIIT R K Valley</p>
+          <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+        </div>
+        <div class="col-lg-9 d-none d-lg-block descriptionBlock">
+          <h5>Computer Science Engineering</h5>
+          <p>IIIT R K Valley</p>
+          <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
