--- a/bootstrap-practice/bootstrap-practice.html
+++ b/bootstrap-practice/bootstrap-practice.html
@@ -1,4 +1,13 @@
-<!--<div class="container">
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="practice-bootstrap.css" />
+</head>
+
+<body>
+  <p>tgf</p>
+  <!--<div class="container">
       <div class="row rowpad">
           <div class="col-9 bg1">
             <p>9</p>
@@ -241,3 +250,6 @@
   <div>
     <span style="margin:auto; p-2">some text3</span>
   </div>-->
+</body>
+
+</html>
