--- a/bootstrap-practice/work.html
+++ b/bootstrap-practice/work.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Work</title>
-    </head>
-    <body>
-        <h3>VijayaLakshmi Mule</h3>
-        <p>Intern at iBHubs<br>
-        Chinna Tekur<br>
-        Kurnool<br>
-        AndhraPradesh<br>
-        518218<br></p>
-        <p>Here you can check more about my work place<br>
-        <a href="ibhubs.co.in">Click here</a></p>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Work</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
+    <script src="../bootstrap/jquery.min.js"></script>
+    <script src="../bootstrap/popper.min.js"></script>
+    <script src="../bootstrap/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="portfolio.css" />
+</head>
+
+<body>
+    <h2 class="text-center mb-4" style="text-decoration:underline">Work place</h2>
+    <div class="card text-center mb-4 bg-light">
+        <div class="car-body">
+            <p class="workContext">VijayaLakshmi Mule<br>Intern at iBHubs<br> Chinna Tekur<br> Kurnool
+                <br> AndhraPradesh
+                <br> 518218
+            </p>
+        </div>
+    </div>
+    <p class="text-center">Here you can check more about my work place click on the below logo<br>
+        <a href="ibhubs.co.in"><img src="../static/ibhubs_logo.png" style="height:100px;" alt="iBHubs" class="mt-4"></a></p>
+</body>
+
 </html>
