--- a/bootstrap-practice/portfolio.html
+++ b/bootstrap-practice/portfolio.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <!--<header>
+  <header>
     <div class="headerBackground">
       <div class="container mb-4">
         <div class="row">
@@ -211,7 +211,9 @@
                       Women Safety
                     </h5>
                     <p class="card-text">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                      We created a device by using IoT for Women Safety with the help of octabrix.<br>
+                      If click a button on the device it will send the message and current and exact location of the women to her closest 3 primary contacts within few seconds.
+                      It is better device for the women safety
                     </p>
                   </div>
                 </div>
@@ -280,7 +282,7 @@
         </div>
       </div>
     </div>
-  </section>-->
+  </section>
   <section>
     <div class="container">
       <div class="row mt-4">
