--- a/bootstrap-practice/bootstrap-practice.html
+++ b/bootstrap-practice/bootstrap-practice.html
@@ -8,16 +8,10 @@
 </head>
 
 <body>
-  <div class="first">
-  </div>
-  <div class="first">
-  </div>
-  <div class="first">
-  </div>
-  <div class="first">
-  </div>
-  <div class="second"></div><div class="second"></div><div class="second"></div><div class="second"></div>
-  <div class="third"></div><div class="third"></div><div class="third"></div><div class="third"></div>
+  <div class="box"></div>
+  <div class="box"></div>
+  <div class="box"></div>
+  <div class="box"></div>
 </body>
 
 </html>
