--- a/bootstrap-practice/bootstrap-practice.html
+++ b/bootstrap-practice/bootstrap-practice.html
@@ -8,10 +8,19 @@
 </head>
 
 <body>
+  <!--<div class="box"></div>
   <div class="box"></div>
   <div class="box"></div>
-  <div class="box"></div>
-  <div class="box"></div>
+  <div class="box"></div>-->
+  <div class="box">
+    <h1>Heading</h1>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+    sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+    magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+    quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+    ut aliquip ex ea commodo consequat.</p>
+    <button class="visitWebsite"><span class="visitWebsiteContext">Visit Website</span></button>
+  </div>
 </body>
 
 </html>
