--- a/assignments/assignment-29/index.html
+++ b/assignments/assignment-29/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1>OUR APPROACH</h1>
   <hr>
-  <div class="block blockPadding">
+  <div class="block">
     <h2>Creating Workforce for 4.0</h2>
     <p>iB Hubs commits to create a powerful workforce with all the necessary tools and techniques to thrive in this new wave of transformation.</p>
   </div><div class="block">
