--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -13,68 +13,11 @@
 
 <body>
   <header>
-    <!--<div class="signUpSec">
-      <div class="container d-xl-none">
-        <div class="row">
-          <div class="col-6">
-            <img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3">
-          </div>
-          <div class="col-6 text-right">
-            <button class="btn-sm btn-outline-light mt-3 mb-3 mr-2">Sign up</button>
-            <nav class="navbar navbar-dark navDisplay p-0">
-              <span class="navbar-toggler-icon"></span>
-              </button>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="signUpSec">
-      <div class="container  d-none d-xl-block">
-        <div class="row">
-          <div class="col-12 ">
-            <li class="navDisplay mr-2"><img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3"></li>
-            <li class="navDisplay mr-2">
-              <div class="dropdown">
-                <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Why GitHub?</button>
-              </div>
-            </li>
-            <li class="navDisplay mr-2 navBarText">
-              Enterprise
-            </li>
-            <li class="navDisplay mr-2">
-              <div class="dropdown">
-                <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</button>
-              </div>
-            </li>
-            <li class="navDisplay navBarText mr-2">
-              MarketPlace
-            </li>
-            <li class="navDisplay mr-4">
-              <div class="dropdown">
-                <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pricing</button>
-              </div>
-            </li>
-            <li class="navDisplay mr-2">
-              <form class="form-inline my-2 my-lg-0 githubLogo">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search GitHub" aria-label="Search">
-              </form>
-            </li>
-            <li class="navDisplay mr-2 navBarText">
-              Sign in
-            </li>
-            <li class="navDisplay">
-              <button class="btn btn-outline-light mt-3 mb-3">Sign up</button>
-            </li>
-          </div>
-        </div>
-      </div>
-    </div>-->
     <div class="signUpSec">
       <div class="container">
         <div class="row">
           <div class="col-12 p-0">
-            <nav class="navbar navbar-expand-xl">
+            <nav class="navbar navbar-expand-xl bg-none">
               <img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3"></p>
               <div>
                 <button class="btn-sm btn-outline-light mt-3 mb-3 mr-2 d-xl-none">Sign up</button>
