--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -29,7 +29,7 @@
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                   <li class="nav-item">
                     <div class="dropdown">
-                      <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Why GitHub?</button>
+                      <button class="btn  dropdownBackground dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Why GitHub?</button>
                     </div>
                   </li>
                   <li class="nav-item active ml-2">
@@ -37,7 +37,7 @@
                   </li>
                   <li class="nav-item">
                     <div class="dropdown">
-                      <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</button>
+                      <button class="btn  dropdownBackground dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</button>
                     </div>
                   </li>
                   <li class="nav-item active ml-2">
@@ -45,7 +45,7 @@
                   </li>
                   <li class="nav-item">
                     <div class="dropdown">
-                      <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pricing</button>
+                      <button class="btn  dropdownBackground dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pricing</button>
                     </div>
                   </li>
                 </ul>
