--- a/bootstrap-practice/work.html
+++ b/bootstrap-practice/work.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <p class="text-center">Here you can check more about my work place click on the below logo<br>
-        <a href="ibhubs.co.in"><img src="../static/ibhubs_logo.png" style="height:100px;" alt="iBHubs" class="mt-4"></a></p>
+        <a href="https://ibhubs.co"><img src="../static/ibhubs_logo.png" style="height:100px;" alt="iBHubs" class="mt-4"></a></p>
 </body>
 
 </html>
