--- a/bootstrap-practice/portfolio.html
+++ b/bootstrap-practice/portfolio.html
@@ -52,13 +52,10 @@
           </div>
         </div>
         <div class="row mt-4 mb-0">
-          <div class="col-8">
-            <div class="headerContext">
+          <div class="col-12">
+            <div class="headerContext text-center">
               I am a designer with the ability to solve problems and make everyone's life better.
             </div>
-          </div>
-          <div class="col-4">
-            <img src="../bujji.jpg" alt="myImage" class="imagesWidth">
           </div>
         </div>
       </div>
@@ -296,6 +293,10 @@
         <div class="col-4 col-md-3 text-center">
           <div class="mb-2"><img src="../tenor-2.gif" alt="dancing" class="hobbiesImg"></div>
           <div class="skillsContext">Shopping</div>
+        </div>
+        <div class="col-4 col-md-3 text-center">
+          <div class="mb-2"><img src="../tiktok.gif" alt="tiktok" class="hobbiesImg"></div>
+          <div class="skillsContext">Tiktok</div>
         </div>
       </div>
     </div>
