--- a/my_portfolio.html
+++ b/my_portfolio.html
@@ -25,19 +25,19 @@
         <ul class="navbar-nav mr-auto"></ul>
         <div class="navbar-text">
           <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="work.html">Work</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="resume1.html">Resume</a>
-          </li>
-        </ul>
+            <li class="nav-item active">
+              <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="work.html">Work</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="resume1.html">Resume</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -55,18 +55,55 @@
     </div>
   </section>
   <section>
-    <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <ul class="p-0">
-          <li class="mt-4"><h4>Follow me on</h4></li>
-          <li class="liDisplay"><a class="nav-link" href="https://www.linkedin.com/in/khyathi-reddy-prasanth/"><img src="static/Social Icons/linkedin.svg" alt="linkedin" class="socialIcons"></a></li>
-          <li class="liDisplay"><a class="nav-link" href="https://www.instagram.com/khyathi_reddy_/?hl=en"><img src="static/Social Icons/instagram.svg" class="socialIcons" alt="instagram"></a></li>
-          <li class="liDisplay"><a class="nav-link" href="https://www.facebook.com/profile.php?id=100016310478419"><img src="static/Social Icons/facebook.svg" alt="facebook" class="socialIcons"></a></li>
-        </ul>
+    <div class="container mt-4 mb-4">
+      <div class="row">
+        <div class="col-12 col-md-12">
+          <h3 class="mb-4 skillsContext">Skills</h3>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center ">
+          <div><img src="static/Skills/C Language Icon/css.png" alt="c-lang" class="mr-4 skillsImg mb-2"></div>
+          <div class="mr-4 skillsContext">C</div>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center">
+          <div><img src="static/Skills/HTML Icon/html(1).png" alt="html-lang" class="mr-4 skillsImg mb-2"></div>
+          <div class="mr-4 skillsContext">HTML</div>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center">
+          <div><img src="static/Skills/CSS Icon/css(1).png" alt="css-lang" class="mr-4 skillsImg mb-2"></div>
+          <div class="mr-4 skillsContext">CSS</div>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center">
+          <div><img src="assignments/assignment-24/assets/android.png" alt="android" class="mr-4 skillsImg mb-2"></div>
+          <div class="mr-4 skillsContext">Android</div>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center">
+          <div><img src="assignments/assignment-24/assets/arduino.png" alt="arduino" class="mr-4 skillsImg mb-2"></div>
+          <div class="mr-4 skillsContext">Arduino</div>
+        </div>
+        <div class="col-6 col-md-4 mb-4 text-center">
+          <div class="mr-4 bootsrapIcon mb-2 skillsImg">
+            <h1>B</h1>
+          </div>
+          <div class="mr-4 skillsContext">Bootstrap</div>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <ul class="p-0">
+            <li class="mt-4">
+              <h4>Follow me on</h4>
+            </li>
+            <li class="liDisplay"><a class="nav-link" href="https://www.linkedin.com/in/khyathi-reddy-prasanth/"><img src="static/Social Icons/linkedin.svg" alt="linkedin" class="socialIcons"></a></li>
+            <li class="liDisplay"><a class="nav-link" href="https://www.instagram.com/khyathi_reddy_/?hl=en"><img src="static/Social Icons/instagram.svg" class="socialIcons" alt="instagram"></a></li>
+            <li class="liDisplay"><a class="nav-link" href="https://www.facebook.com/profile.php?id=100016310478419"><img src="static/Social Icons/facebook.svg" alt="facebook" class="socialIcons"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </section>
 </body>
 
