--- a/resume1.html
+++ b/resume1.html
@@ -43,40 +43,81 @@
                         <h2 class="mb-4 skillsContext">Skills</h2>
                         <hr>
                     </div>
-                    <div class="col-6 col-md-4 mb-4 text-center ">
-                        <div><img src="static/Skills/C Language Icon/css.png" alt="c-lang" class="mr-4 skillsImg mb-2"></div>
-                        <div class="mr-4 skillsContext">C</div>
-                    </div>
-                    <div class="col-6 col-md-4 mb-4 text-center">
-                        <div><img src="static/Skills/HTML Icon/html(1).png" alt="html-lang" class="mr-4 skillsImg mb-2"></div>
-                        <div class="mr-4 skillsContext">HTML</div>
-                    </div>
-                    <div class="col-6 col-md-4 mb-4 text-center">
-                        <div><img src="static/Skills/CSS Icon/css(1).png" alt="css-lang" class="mr-4 skillsImg mb-2"></div>
-                        <div class="mr-4 skillsContext">CSS</div>
-                    </div>
-                    <div class="col-6 col-md-4 mb-4 text-center">
-                        <div><img src="assignments/assignment-24/assets/android.png" alt="android" class="mr-4 skillsImg mb-2"></div>
-                        <div class="mr-4 skillsContext">Android</div>
-                    </div>
-                    <div class="col-6 col-md-4 mb-4 text-center">
-                        <div><img src="assignments/assignment-24/assets/arduino.png" alt="arduino" class="mr-4 skillsImg mb-2"></div>
-                        <div class="mr-4 skillsContext">Arduino</div>
-                    </div>
-                    <div class="col-6 col-md-4 mb-4 text-center">
-                        <div class="mr-4 bootsrapIcon mb-2 skillsImg">
-                            <h1>B</h1>
-                        </div>
-                        <div class="mr-4 skillsContext">Bootstrap</div>
+                    <div class="col-6 mb-4">
+                        <ul>
+                            <li>C</li>
+                            <li>Java</li>
+                            <li>Python</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>BootStrap</li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </section>
         <section>
-            <div class="container mt-4">
+            <div class="container mt-4 blockColor">
                 <div class="row">
                     <div class="col-12">
                         <h2>Languages i speak</h2>
+                        <hr>
+                    </div>
+                    <div class="col-12">
+                        <ul>
+                            <li>Telugu</li>
+                            <li>English</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container mt-4 blockColor">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>Experience</h2>
+                        <hr>
+                    </div>
+                    <div class="col-12">
+                        <h4>Present</h4>
+                        <p>Intern at iBHubs</p>
+                        <p>I am being trained in industry 4.O technologies on par with international standards.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container mt-4 blockColor">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>Education</h2>
+                        <hr>
+                    </div>
+                    <div class="col-12">
+                        <h5>2017-21</h5>
+                        <h5>Bachelor of Computer Science,RK Valley(RGUKT)</h5>
+                        <p>Still pursuing Bachelor of Computer Science</p>
+                        <h5>2015-17</h5>
+                        <h5>Pre University Course,RK Valley(RGUKT)</h5>
+                        <p>passed with 85%</p>
+                        <h5>2015</h5>
+                        <h5>10th class,Sarada High School</h5>
+                        <p>passed with 100%</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container mt-4 blockColor">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>Certificates</h2>
+                        <hr>
+                    </div>
+                    <div class="col-12">
+                        <li><h5>2019</h5><p>Things Conference Participation</p></li>
+                        <li><h5>2017</h5><p>Cambridge Certificate</p></li>
                     </div>
                 </div>
             </div>
