--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -58,11 +58,11 @@
     </div>
   </section>
   <section>
-    <div class="process">
+    <div class="blockBackGround">
       <div class="container">
         <div class="row mb-5 mt-5">
           <div class="col-12 mt-5 mb-5 text-center">
-            <div class="bar mb-4 mt-4"></div>
+            <div class="bar mb-4 mt-4 barMargin"></div>
             <h3>Simple and handy process</h3>
             <p class="mb-4">All-inclusive,usage-based car subscriptions.Monthly plan based on how much you drive that includes parking,insurance,maintenance and more.</p>
           </div>
@@ -94,7 +94,8 @@
     <div class="container mb-4 mt-4">
       <div class="row">
         <div class="col-12 col-lg-4 text-center text-lg-left">
-          <div class="bar mt-4 mb-4 "></div>
+          <div class="bar mt-4 mb-4 barMargin d-md-none"></div>
+          <div class="bar mt-4 mb-4 d-none d-md-block"></div>
         </div>
       </div>
       <div class="row">
@@ -127,11 +128,11 @@
     </div>
   </section>
   <section>
-    <div class="process">
+    <div class="blockBackGround">
       <div class="container">
         <div class="row">
           <div class="col-12 mt-5 mb-4 text-center">
-            <div class="bar mb-4"></div>
+            <div class="bar mb-4 barMargin"></div>
             <h2 class="mb-4">OUR TEAM</h2>
             <p class="mb-5"> A Perfect blend of creativity and technical wizardry.The best people formulate for great customer experience.</p>
           </div>
@@ -140,7 +141,7 @@
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Henry Letham</h5>
-            <p class="ourTeamParaOpacity mb-4">Founder</p>
+            <p class="opacity mb-4">Founder</p>
             <p>He earned his bachelor's degree at the University of Maryland,College Park and PhD in computer science from Stanford University.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
@@ -148,7 +149,7 @@
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Holden Caulfield</h5>
-            <p class="ourTeamParaOpacity mb-4">UI Developer</p>
+            <p class="opacity mb-4">UI Developer</p>
             <p>10+ years experience in frontend technologies.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
@@ -156,7 +157,7 @@
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Alper Kamu</h5>
-            <p class="ourTeamParaOpacity mb-4">Designer</p>
+            <p class="opacity mb-4">Designer</p>
             <p>One of the best designers in the current market.With 6+ years experience.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
@@ -164,7 +165,7 @@
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Atticus Finch</h5>
-            <p class="ourTeamParaOpacity mb-4">Marketing Manager</p>
+            <p class="opacity mb-4">Marketing Manager</p>
             <p>Won a price best marketing startegist 2019.</p>
           </div>
         </div>
@@ -175,7 +176,7 @@
     <div class="container mb-4">
       <div class="row">
         <div class="col-12 mt-5 mb-4 text-center">
-          <div class="bar mb-4"></div>
+          <div class="bar mb-4 barMargin"></div>
           <h2 class="mb-4">Testimonials</h2>
         </div>
         <div class="col-12 col-md-6 mb-4">
@@ -184,8 +185,8 @@
               <img src="assets/double-quote.svg" alt="double_quote" class="double_quote mb-2">
               <p>Excellent and prompt customer service.A truly professional car rental company.Cars are in up-to-date condition.All payment,contract terms and transactions are transparent.Great promotions and supprot from sales team helped me get a brand
                 new SUV.Thanks to Mandad Nest.</p>
-              <h6 class="text-right">Abu Joshiy</h6>
-              <p class="ourTeamParaOpacity text-right">24/5/2020</p>
+              <p class="text-right testimonialFont">Abu Joshiy</p>
+              <p class="opacity text-right">24/5/2020</p>
             </div>
           </div>
         </div>
@@ -194,8 +195,8 @@
             <div class="card-body">
               <img src="assets/double-quote.svg" alt="double_quote" class="double_quote mb-2">
               <p>Excellent experience.Didn't take long for the chap delivering the car to find us at the airport once we connected to the temporary free wifi at the airport.Car was the newest vehicle i've ever driven,immaculate,only 700km on the odometer.</p>
-              <h6 class="text-right">Henry Kamu</h6>
-              <p class="ourTeamParaOpacity text-right">20/5/2020</p>
+              <p class="text-right testimonialFont">Henry Kamu</p>
+              <p class="opacity text-right">20/5/2020</p>
             </div>
           </div>
         </div>
@@ -228,14 +229,14 @@
         </div>
       </div>
     </div>
-    <div class="process">
+    <div class="blockBackGround">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center text-md-left col-md-6 mt-4">
-            <p class="ourTeamParaOpacity">©2020 tailblocks__ @knyttneve</p>
+            <p class="opacity">©2020 tailblocks__ @knyttneve</p>
           </div>
           <div class="col-12 text-center text-md-right col-md-6 mt-4">
-            <p class="ourTeamParaOpacity">Enamel pin tousled raclette tacos irony.</p>
+            <p class="opacity">Enamel pin tousled raclette tacos irony.</p>
           </div>
         </div>
       </div>
