--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -180,7 +180,7 @@
           <h2 class="mb-4">Testimonials</h2>
         </div>
         <div class="col-12 col-md-6 mb-4">
-          <div class="card process h-100">
+          <div class="card blockBackGround h-100">
             <div class="card-body">
               <img src="assets/double-quote.svg" alt="double_quote" class="double_quote mb-2">
               <p>Excellent and prompt customer service.A truly professional car rental company.Cars are in up-to-date condition.All payment,contract terms and transactions are transparent.Great promotions and supprot from sales team helped me get a brand
@@ -191,7 +191,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 mb-4">
-          <div class="card process h-100">
+          <div class="card blockBackGround h-100">
             <div class="card-body">
               <img src="assets/double-quote.svg" alt="double_quote" class="double_quote mb-2">
               <p>Excellent experience.Didn't take long for the chap delivering the car to find us at the airport once we connected to the temporary free wifi at the airport.Car was the newest vehicle i've ever driven,immaculate,only 700km on the odometer.</p>
