--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -166,7 +166,7 @@
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Atticus Finch</h5>
             <p class="opacity mb-4">Marketing Manager</p>
-            <p>Won a price best marketing startegist 2019.</p>
+            <p class="mb-5">Won a price best marketing startegist 2019.</p>
           </div>
         </div>
       </div>
